--- a/FlightStore/Services/Station/Api/Station.Api/Station.Api.csproj
+++ b/FlightStore/Services/Station/Api/Station.Api/Station.Api.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Persistence\Station.Persistence.Database\Station.Persistence.Database.csproj" />
     <ProjectReference Include="..\..\Services\Station.Service.Queries\Station.Service.Queries.csproj" />
   </ItemGroup>
 
