--- a/FlightStore/Services/Station/Api/Station.Api/appsettings.json
+++ b/FlightStore/Services/Station/Api/Station.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionString": {
-    "DefaultConnection": "Server=tcp:flightstore.database.windows.net,1433;Initial Catalog=FlightServer;Persist Security Info=False;User ID=isokmio;Password=.Mio4heavenly;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost; Database=FlightServer; Trusted_Connection= True;"
   },
   "Logging": {
     "LogLevel": {
