Adjust configuration settings

--- a/FlightStore/Services/Station/Api/Station.Api/appsettings.Development.json
+++ b/FlightStore/Services/Station/Api/Station.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionString": {
-    "DefaultConnection": "Server=localhost; Database=FlightServer; Trusted_Connection= True;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Database=FlightStore; Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
