--- a/FlightStore/Services/Booking/Api/Booking.Api/appsettings.Development.json
+++ b/FlightStore/Services/Booking/Api/Booking.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionString": {
-    "DefaultConnection": "Server=tcp:flightstore.database.windows.net,1433;Initial Catalog=FlightServer;Persist Security Info=False;User ID=isokmio;Password=.Mio4heavenly;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Database=FlightStore; Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,6 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
