--- a/FlightStore/WebStore/Airline/package.json
+++ b/FlightStore/WebStore/Airline/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "vee-validate": "^2.2.15",
     "vue": "2.5.17",
     "vue-axios": "^3.2.4",
     "vuex": "^3.6.2"
